# in-time

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  biome.json  mise.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/config/: settings.py  urls.py  views.py
backend/config/tests/: test_tile_proxy.py
backend/pipeline/: archive.py  artifacts.py  bus_stops.py  datadir.py  fetch.py  frequency.py  gtfs.py  gtfs_archive.py  heartbeat_blob.py  models.py  railnet.py  railnet_gdb.py  schedule.py  schedule_blob.py  schedule_day.py
backend/pipeline/management/commands/: build_day.py  build_schedule.py  verify_railnet.py
backend/pipeline/migrations/: 0001_initial.py
backend/pipeline/network/: __init__.py  access.py  edges.py  geometry.py  graph.py  rail.py  rail_gdb.py  road_gdb.py  router.py  thresholds.py
backend/pipeline/tests/: golden_blob.py  test_artifacts.py  test_build_run.py  test_bus_stops.py  test_day_builds.py  test_fetch.py  test_frequency.py  test_golden_blob.py  test_gtfs.py  test_heartbeat_blob.py  test_leg_routing.py  test_network_router.py  test_railnet.py  test_railnet_realdata.py  test_road_gdb.py  test_schedule.py  test_schedule_blob.py  test_schedule_day.py  test_spatial_grid.py
backend/tests/: test_smoke.py
backend/web/: published.py  urls.py  views.py
backend/web/templates/web/: base.html  herzschlag.html
backend/web/tests/: test_published.py  test_views.py
docs/: performance.md  straight-line-fallbacks.md
frontend/: smoke.test.js
frontend/herzschlag/: main.js  panel.js
frontend/styles/: base.css  cockpit.css  layout.css  sidebar.css
frontend/viz-core/: camera.js  camera.test.js  cameraControls.js  cockpit.js  dom.js  keyboardControls.js  loader.js  panel.js  panelContext.js  projection.js  projection.test.js  sidebar.js  timeModel.js  timeModel.test.js  vehiclePositionEngine.js  vehiclePositionEngine.straightline.test.js  vehiclePositionEngine.test.js  vizCore.js
frontend/viz-core/fixtures/: golden-bus-day.itsb  golden-day.itsb
frontend/viz-core/tiles/: tileLayer.js  tileMatrixSet.js  tileMatrixSet.test.js  tileSource.js
tooling/: check.sh  test.sh  vendor-p5.mjs
